luaprograms/unit_tests/errors/stacktrace1.err
error: luaprograms/unit_tests/errors/stacktrace1.lua:10: some error
stack traceback:
	[NATIVE]: in function 'error'
	luaprograms/unit_tests/errors/stacktrace1.lua:10: in function 'func3'
	luaprograms/unit_tests/errors/stacktrace1.lua:6: in function 'func2'
	luaprograms/unit_tests/errors/stacktrace1.lua:2: in function 'func1'
	luaprograms/unit_tests/errors/stacktrace1.lua:13: in main chunk
